funktionsfähiger mini webserver

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,8 +2,5 @@ FILE(GLOB_RECURSE app_sources *.cpp)
 
 idf_component_register( SRCS ${app_sources} 
                     INCLUDE_DIRS ../include
+                    PRIV_REQUIRES vfs nvs_flash esp_netif mdns esp_http_server json
                     )
-#PRIV_REQUIRES nvs_flash vfs esp_netif mdns esp_http_server json
-
-# idf_component_register(SRCS "station_example_main.c"
-#                 INCLUDE_DIRS ".")
