--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
     "idf.port": "/dev/ttyUSB0",
     "editor.tabCompletion": "on",
     "editor.tabSize": 2,
-    "idf.adapterTargetName": "esp32s2"
+    "idf.adapterTargetName": "esp32"
 }
