--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,7 +2,15 @@ FILE(GLOB_RECURSE app_sources *.cpp)
 
 # spiffs_create_partition_image( measure ../www FLASH_IN_PROJECT )
 
+
 idf_component_register( SRCS ${app_sources} 
                     INCLUDE_DIRS ../include
                     PRIV_REQUIRES esp32_wifi_manager nvs_flash json led_strip dht ds18x20 spiffs esp_adc_cal
                     )
+
+# add_custom_command(
+#   OUTPUT ../include/version.hpp
+#   COMMAND ../tools/makeVersionString.sh
+#   DEPENDS ${app_sources} ../include/version.hpp main.cpp
+# )
+                    
