Erste Versiuche Umstellung IDF 5.0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,55 +1,112 @@
 {
-    "idf.flashType": "UART",
-    "idf.port": "/dev/ttyUSB0",
-    "editor.tabCompletion": "on",
-    "editor.tabSize": 2,
+    "C_Cpp.updateChannel": "Insiders",
+    "window.zoomLevel": 2,
+    "[cpp]": {
+        "editor.defaultFormatter": "ms-vscode.cpptools"
+    },
+    "clang-format.assumeFilename": ".clang-format",
+    "clang-format.language.cpp.style": "file",
+    "cmake.configureOnOpen": false,
+    "settingsSync.ignoredSettings": [
+        "-C_Cpp.clang_format_style"
+    ],
+    "C_Cpp.clang_format_sortIncludes": false,
+    "C_Cpp.vcFormat.indent.caseContents": false,
+    "C_Cpp.vcFormat.indent.namespaceContents": false,
+    "C_Cpp.vcFormat.newLine.beforeCatch": false,
+    "C_Cpp.vcFormat.space.afterComma": false,
+    "C_Cpp.vcFormat.space.afterKeywordsInControlFlowStatements": false,
+    "C_Cpp.vcFormat.space.beforeBlockOpenBrace": false,
+    "C_Cpp.vcFormat.space.beforeConstructorColon": false,
+    "git.autofetch": true,
+    "git.enableSmartCommit": true,
+    "files.eol": "\n",
+    "files.insertFinalNewline": true,
+    "html.format.endWithNewline": true,
+    "C_Cpp.default.compilerPath": "C:/Users/dmarc/.platformio/packages/toolchain-xtensa32/bin/xtensa-esp32-elf-gcc.exe",
+    "git.confirmSync": false,
+    "liveshare.authenticationProvider": "GitHub",
+    "todo-tree.tree.showScanModeButton": false,
+    "todo-tree.filtering.ignoreGitSubmodules": true,
+    "todo-tree.regex.regex": "((//|#|<!--|;|/\\*|^)\\s*($TAGS):|^\\s*- \\[ \\])",
+    "workbench.editorAssociations": {
+        "*.ipynb": "jupyter-notebook"
+    },
+    "[javascript]": {
+        "editor.defaultFormatter": "xaver.clang-format"
+    },
+    "notebook.cellToolbarLocation": {
+        "default": "right",
+        "jupyter-notebook": "left"
+    },
+    "python.analysis.logLevel": "Information",
+    "python.defaultInterpreterPath": "C:\\Program Files\\Python\\python.exe",
+    "python.linting.pycodestyleCategorySeverity.E": "Hint",
+    "editor.suggestSelection": "first",
+    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+    "python.diagnostics.sourceMapsEnabled": true,
+    "python.globalModuleInstallation": true,
+    "python.workspaceSymbols.enabled": true,
+    "python.languageServer": "Pylance",
+    "workbench.startupEditor": "none",
+    "security.workspace.trust.untrustedFiles": "open",
+    "editor.formatOnSave": true,
+    "debug.onTaskErrors": "debugAnyway",
+    "remote.SSH.remotePlatform": {
+        "radioweckerdev.fritz.box": "linux",
+        "modemclient.fritz.box": "linux",
+        "stealth-develop.fritz.box": "linux",
+        "reverse-proxy": "linux",
+        "dns-pi": "linux",
+        "wus-host-root": "linux",
+        "webserver-vm": "linux",
+        "radiotest.fritz.box": "linux"
+    },
+    "remote.SSH.foldersSortOrder": "alphabetical",
+    "todo-tree.general.tags": [
+        "BUG",
+        "HACK",
+        "FIXME",
+        "TODO",
+        "REMARK",
+        "[ ]",
+        "[x]",
+        "ATTENTION"
+    ],
+    "todo-tree.highlights.backgroundColourScheme": [
+        "red",
+        "orange",
+        "yellow",
+        "green",
+        "blue",
+        "indigo",
+        "violet",
+        "violet"
+    ],
+    "todo-tree.highlights.foregroundColourScheme": [
+        "white",
+        "black",
+        "black",
+        "white",
+        "yellow",
+        "white",
+        "black",
+        "yellow"
+    ],
+    "todo-tree.general.enableFileWatcher": true,
+    "todo-tree.highlights.useColourScheme": true,
+    "telemetry.telemetryLevel": "crash",
+    "idf.espIdfPath": "/usr/local/esp-idf",
+    "idf.pythonBinPath": "/root/.espressif/python_env/idf5.0_py3.10_env/bin/python",
+    "idf.toolsPath": "/root/.espressif",
+    "idf.gitPath": "/usr/bin/git",
+    "idf.cmakeCompilerArgs": [
+        "-G",
+        "Ninja",
+        "-DPYTHON_DEPS_CHECKED=1",
+        "-DESP_PLATFORM=1",
+        "IDF_CCACHE_ENABLE=1"
+    ],
     "idf.adapterTargetName": "esp32",
-    "files.associations": {
-        "array": "cpp",
-        "atomic": "cpp",
-        "bit": "cpp",
-        "*.tcc": "cpp",
-        "cctype": "cpp",
-        "clocale": "cpp",
-        "cmath": "cpp",
-        "cstdarg": "cpp",
-        "cstddef": "cpp",
-        "cstdint": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "cstring": "cpp",
-        "cwchar": "cpp",
-        "cwctype": "cpp",
-        "deque": "cpp",
-        "unordered_map": "cpp",
-        "vector": "cpp",
-        "exception": "cpp",
-        "algorithm": "cpp",
-        "functional": "cpp",
-        "iterator": "cpp",
-        "memory": "cpp",
-        "memory_resource": "cpp",
-        "numeric": "cpp",
-        "optional": "cpp",
-        "random": "cpp",
-        "string": "cpp",
-        "string_view": "cpp",
-        "system_error": "cpp",
-        "tuple": "cpp",
-        "type_traits": "cpp",
-        "utility": "cpp",
-        "fstream": "cpp",
-        "initializer_list": "cpp",
-        "iosfwd": "cpp",
-        "istream": "cpp",
-        "limits": "cpp",
-        "new": "cpp",
-        "ostream": "cpp",
-        "sstream": "cpp",
-        "stdexcept": "cpp",
-        "streambuf": "cpp",
-        "cinttypes": "cpp",
-        "typeinfo": "cpp",
-        "iostream": "cpp"
-    }
+    "idf.port": "/dev/ttyUSB0"
 }
