--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,6 @@
+#idf_component_register(SRCS "softap_example_main.c"
+#                    INCLUDE_DIRS ".")
+
 FILE(GLOB_RECURSE app_sources *.cpp)
 
 # spiffs_create_partition_image( measure ../www FLASH_IN_PROJECT )
@@ -5,12 +8,5 @@ FILE(GLOB_RECURSE app_sources *.cpp)
 
 idf_component_register( SRCS ${app_sources} 
                     INCLUDE_DIRS ../include
-                    PRIV_REQUIRES esp32_wifi_manager nvs_flash json led_strip dht ds18x20 spiffs esp_adc_cal
+                    PRIV_REQUIRES vfs esp32_wifi_manager nvs_flash json led_strip dht ds18x20 spiffs esp_adc
                     )
-
-# add_custom_command(
-#   OUTPUT ../include/version.hpp
-#   COMMAND ../tools/makeVersionString.sh
-#   DEPENDS ${app_sources} ../include/version.hpp main.cpp
-# )
-                    
