--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -5,5 +5,5 @@ FILE(GLOB_RECURSE app_sources *.cpp)
 
 idf_component_register( SRCS ${app_sources} 
                     INCLUDE_DIRS ../include
-                    PRIV_REQUIRES vfs esp32_wifi_manager nvs_flash json led_strip dht ds18x20 spiffs esp_adc
+                    PRIV_REQUIRES esp_app_format vfs esp32_wifi_manager nvs_flash json led_strip dht ds18x20 spiffs esp_adc 
                     )
