funtioniert bis hierhin

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,7 +24,7 @@ monitor_port = ${common.device}
 [common]
 build_type_d = debug
 build_type_r = release
-extra_flags_d = -O0 -DFASTLED_INTERNAL
+extra_flags_d = -O0 
 extra_flags_r = -O3 -DFASTLED_INTERNAL -DRELEASE -DCORE_DEBUG_LEVEL=0
 device = /dev/ttyUSB0
 flash_mode = qio
