wifi and wifi manager and ntp runs

--- a/platformio.ini
+++ b/platformio.ini
@@ -38,6 +38,9 @@ lib_dht_sensor = adafruit/DHT sensor library @ ^1.4.4
 lib_log = x385832/Elog@^1.1.4
 lib_led = jasonlzt/FastLED@^3.5.0
 lib_adc = madhephaestus/ESP32AnalogRead@^0.2.1
+lib_websrv = ottowinter/ESPAsyncWebServer-esphome @ ^3.1.0
+lib_ntp = arduino-libraries/NTPClient @ ^3.2.1
+lib_wifi = https://github.com/tzapu/WiFiManager.git
 
 [env:esp-debug]
 board = esp-wrover-kit
@@ -54,6 +57,9 @@ lib_deps =
   ${libs.lib_ada}
 	${libs.lib_led}
 	${libs.lib_adc}
+	${libs.lib_websrv}
+	${libs.lib_ntp}
+	${libs.lib_wifi}
 
 [env:esp-release]
 board = esp-wrover-kit
@@ -70,3 +76,6 @@ lib_deps =
   ${libs.lib_ada}
 	${libs.lib_led}
 	${libs.lib_adc}
+	${libs.lib_websrv}
+	${libs.lib_ntp}
+	${libs.lib_wifi}
