try to deliver http index

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,8 +24,8 @@ monitor_port = ${common.device}
 [common]
 build_type_d = debug
 build_type_r = release
-extra_flags_d = -O0 
-extra_flags_r = -O3 -DFASTLED_INTERNAL -DRELEASE -DCORE_DEBUG_LEVEL=0
+extra_flags_d = -O0 -DBUILD_DEBUG -DASYNCWEBSERVER_REGEX=1
+extra_flags_r = -O3 -DFASTLED_INTERNAL -DBUILD_RELEASE -DRELEASE -DCORE_DEBUG_LEVEL=0 -DASYNCWEBSERVER_REGEX=1
 device = /dev/ttyUSB0
 flash_mode = qio
 f_flash = 80000000L
