hostnamd with chipid

--- a/platformio.ini
+++ b/platformio.ini
@@ -41,6 +41,7 @@ lib_adc = madhephaestus/ESP32AnalogRead@^0.2.1
 lib_websrv = ottowinter/ESPAsyncWebServer-esphome @ ^3.1.0
 lib_ntp = arduino-libraries/NTPClient @ ^3.2.1
 lib_wifi = https://github.com/tzapu/WiFiManager.git
+lib_syslog =  arcao/Syslog @ ^2.0.0
 
 [env:esp-debug]
 board = esp-wrover-kit
