more log versions

--- a/platformio.ini
+++ b/platformio.ini
@@ -42,6 +42,7 @@ lib_websrv = ottowinter/ESPAsyncWebServer-esphome @ ^3.1.0
 lib_ntp = arduino-libraries/NTPClient @ ^3.2.1
 lib_wifi = https://github.com/tzapu/WiFiManager.git
 lib_syslog =  arcao/Syslog @ ^2.0.0
+lib_syslog2 = evotodi/TLogPlus@^1.1.6
 
 [env:esp-debug]
 board = esp-wrover-kit
@@ -55,7 +56,7 @@ lib_deps =
 	${libs.lib_async}
 	${libs.lib_dht_sensor}
 	${libs.lib_log}
-  ${libs.lib_ada}
+    ${libs.lib_ada}
 	${libs.lib_led}
 	${libs.lib_adc}
 	${libs.lib_websrv}
