--- a/platformio.ini
+++ b/platformio.ini
@@ -24,8 +24,8 @@ monitor_port = ${common.device}
 [common]
 build_type_d = debug
 build_type_r = release
-extra_flags_d = -O0 -DBUILD_DEBUG -DASYNCWEBSERVER_REGEX=1
-extra_flags_r = -O3 -DFASTLED_INTERNAL -DBUILD_RELEASE -DRELEASE -DCORE_DEBUG_LEVEL=0 -DASYNCWEBSERVER_REGEX=1
+extra_flags_d = -O0 -DBUILD_DEBUG -DASYNCWEBSERVER_REGEX=1 -DLOGGER_DISABLE_SPIFFS -DLOGGER_DISABLE_SD
+extra_flags_r = -O3 -DFASTLED_INTERNAL -DBUILD_RELEASE -DRELEASE -DCORE_DEBUG_LEVEL=0 -DASYNCWEBSERVER_REGEX=1 -DLOGGER_DISABLE_SPIFFS -DLOGGER_DISABLE_SD
 device = /dev/ttyUSB0
 flash_mode = qio
 f_flash = 80000000L
@@ -41,8 +41,9 @@ lib_adc = madhephaestus/ESP32AnalogRead@^0.2.1
 lib_websrv = ottowinter/ESPAsyncWebServer-esphome @ ^3.1.0
 lib_ntp = arduino-libraries/NTPClient @ ^3.2.1
 lib_wifi = https://github.com/tzapu/WiFiManager.git
-lib_syslog =  arcao/Syslog @ ^2.0.0
-lib_syslog2 = evotodi/TLogPlus@^1.1.6
+lib_syslog =  arcao/Syslog@^2.0.0
+lib_timelib = paulstoffregen/Time@^1.6.1
+lib_adasdfat = adafruit/SdFat - Adafruit Fork@^2.2.1
 
 [env:esp-debug]
 board = esp-wrover-kit
@@ -55,7 +56,9 @@ board_build.f_cpu = ${common.f_cpu}
 lib_deps = 
 	${libs.lib_async}
 	${libs.lib_dht_sensor}
-	${libs.lib_log}
+	${libs.lib_syslog}
+	${libs.lib_timelib}
+    ${libs.lib_adasdfat}
     ${libs.lib_ada}
 	${libs.lib_led}
 	${libs.lib_adc}
@@ -74,8 +77,7 @@ board_build.f_cpu = ${common.f_cpu}
 lib_deps = 
 	${libs.lib_async}
 	${libs.lib_dht_sensor}
-	${libs.lib_log}
-  ${libs.lib_ada}
+    ${libs.lib_ada}
 	${libs.lib_led}
 	${libs.lib_adc}
 	${libs.lib_websrv}
