bugfix: definitons for release corrected

--- a/platformio.ini
+++ b/platformio.ini
@@ -29,7 +29,8 @@ extra_flags_r = -O3 -DFASTLED_INTERNAL -DBUILD_RELEASE -DRELEASE -DCORE_DEBUG_LE
 device = /dev/ttyUSB0
 flash_mode = qio
 f_flash = 80000000L
-f_cpu = 160000000L
+f_cpu = 240000000L
+;f_cpu = 160000000L
 
 [libs]
 lib_async = sigmashig/Async1Wire @ ^0.3.1
@@ -77,6 +78,9 @@ board_build.f_cpu = ${common.f_cpu}
 lib_deps = 
 	${libs.lib_async}
 	${libs.lib_dht_sensor}
+	${libs.lib_syslog}
+	${libs.lib_timelib}
+    ${libs.lib_adasdfat}
     ${libs.lib_ada}
 	${libs.lib_led}
 	${libs.lib_adc}
