--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,11 +14,11 @@
             "name": "PIO Debug",
             "executable": "/root/esp32/arduino-env-server/.pio/build/esp-debug/firmware.elf",
             "projectEnvName": "esp-debug",
-            "toolchainBinDir": "/root/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch5/bin",
+            "toolchainBinDir": "/root/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
-                "task": "Pre-Debug (esp-debug)"
+                "task": "Pre-Debug"
             }
         },
         {
@@ -27,7 +27,7 @@
             "name": "PIO Debug (skip Pre-Debug)",
             "executable": "/root/esp32/arduino-env-server/.pio/build/esp-debug/firmware.elf",
             "projectEnvName": "esp-debug",
-            "toolchainBinDir": "/root/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch5/bin",
+            "toolchainBinDir": "/root/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
@@ -36,7 +36,7 @@
             "name": "PIO Debug (without uploading)",
             "executable": "/root/esp32/arduino-env-server/.pio/build/esp-debug/firmware.elf",
             "projectEnvName": "esp-debug",
-            "toolchainBinDir": "/root/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch5/bin",
+            "toolchainBinDir": "/root/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
         }
