--- a/platformio.ini
+++ b/platformio.ini
@@ -34,17 +34,18 @@ f_cpu = 240000000L
 
 [libs]
 lib_async = sigmashig/Async1Wire @ ^0.3.1
-lib_ada = adafruit/Adafruit Unified Sensor@^1.1.13
-lib_dht_sensor = adafruit/DHT sensor library @ ^1.4.4
-lib_log = x385832/Elog@^1.1.4
+lib_ada = adafruit/Adafruit Unified Sensor@^1.1.14
+lib_dht_sensor = adafruit/DHT sensor library @ ^1.4.6
+;lib_log = x385832/Elog@^1.1.4
+lib_log = x385832/Elog@^2.0.5
 lib_led = jasonlzt/FastLED@^3.5.0
-lib_adc = madhephaestus/ESP32AnalogRead@^0.2.1
-lib_websrv = ottowinter/ESPAsyncWebServer-esphome @ ^3.1.0
+lib_adc = madhephaestus/ESP32AnalogRead@^0.3.0
+lib_websrv = ottowinter/ESPAsyncWebServer-esphome @ ^3.3.0
 lib_ntp = arduino-libraries/NTPClient @ ^3.2.1
 lib_wifi = https://github.com/tzapu/WiFiManager.git
 lib_syslog =  arcao/Syslog@^2.0.0
 lib_timelib = paulstoffregen/Time@^1.6.1
-lib_adasdfat = adafruit/SdFat - Adafruit Fork@^2.2.1
+lib_adasdfat = adafruit/SdFat - Adafruit Fork@^2.2.3
 
 [env:esp-debug]
 board = esp-wrover-kit
