--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,31 +12,31 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "/root/esp32/arduino-env-server/.pio/build/esp-debug/firmware.elf",
+            "executable": "/home/esp32/arduino-env-server/.pio/build/esp-debug/firmware.elf",
             "projectEnvName": "esp-debug",
-            "toolchainBinDir": "/root/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch5/bin",
+            "toolchainBinDir": "/root/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
-                "task": "Pre-Debug (esp-debug)"
+                "task": "Pre-Debug"
             }
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/root/esp32/arduino-env-server/.pio/build/esp-debug/firmware.elf",
+            "executable": "/home/esp32/arduino-env-server/.pio/build/esp-debug/firmware.elf",
             "projectEnvName": "esp-debug",
-            "toolchainBinDir": "/root/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch5/bin",
+            "toolchainBinDir": "/root/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "/root/esp32/arduino-env-server/.pio/build/esp-debug/firmware.elf",
+            "executable": "/home/esp32/arduino-env-server/.pio/build/esp-debug/firmware.elf",
             "projectEnvName": "esp-debug",
-            "toolchainBinDir": "/root/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch5/bin",
+            "toolchainBinDir": "/root/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
         }
