--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,21 +12,21 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "/home/esp32/arduino-env-server/.pio/build/esp-release/firmware.elf",
-            "projectEnvName": "esp-release",
+            "executable": "/home/esp32/arduino-env-server/.pio/build/esp-debug/firmware.elf",
+            "projectEnvName": "esp-debug",
             "toolchainBinDir": "/root/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
-                "task": "Pre-Debug (esp-release)"
+                "task": "Pre-Debug (esp-debug)"
             }
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/home/esp32/arduino-env-server/.pio/build/esp-release/firmware.elf",
-            "projectEnvName": "esp-release",
+            "executable": "/home/esp32/arduino-env-server/.pio/build/esp-debug/firmware.elf",
+            "projectEnvName": "esp-debug",
             "toolchainBinDir": "/root/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
@@ -34,8 +34,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "/home/esp32/arduino-env-server/.pio/build/esp-release/firmware.elf",
-            "projectEnvName": "esp-release",
+            "executable": "/home/esp32/arduino-env-server/.pio/build/esp-debug/firmware.elf",
+            "projectEnvName": "esp-debug",
             "toolchainBinDir": "/root/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
