--- a/platformio.ini
+++ b/platformio.ini
@@ -42,7 +42,7 @@ lib_adc = madhephaestus/ESP32AnalogRead @ ^0.3.0
 lib_websrv = ottowinter/ESPAsyncWebServer-esphome @ ^3.3.0
 lib_ntp = arduino-libraries/NTPClient @ ^3.2.1
 lib_wifi = https://github.com/tzapu/WiFiManager.git
-lib_syslog =  arcao/Syslog @ ^2.0.0
+;lib_syslog =  arcao/Syslog @ ^2.0.0
 lib_timelib = paulstoffregen/Time @ ^1.6.1
 lib_adasdfat = adafruit/SdFat - Adafruit Fork @ ^2.2.3
 
@@ -68,7 +68,8 @@ lib_deps =
 
 [env:esp-release]
 board = esp-wrover-kit
-platform = https://github.com/platformio/platform-espressif32.git
+;platform = https://github.com/platformio/platform-espressif32.git
+platform = espressif32  @ ^6.9.0
 build_flags = -std=c++14  ${common.extra_flags_r}
 build_type = ${common.build_type_r}
 board_build.flash_mode = ${common.flash_mode}
